# backend

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  index.html  main.py  models.py  pyproject.toml  test.py
extensions/: image-blocker.crx  ublock.crx
kinnema/: manage.py
kinnema/api/: admin.py  models.py  urls.py  views.py
kinnema/api/migrations/: 0001_initial.py
kinnema/api/tmdb/: fetch_changes.py  models.py
kinnema/kinnema/: asgi.py  settings.py  urls.py  wsgi.py
providers/: __init__.py  dizipal.py
src/: crud.py  deps.py  main.py  models.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: 0d4c1ee4b97c_add_tmdb_id.py  53cd43dc93d9_last_watched_table.py  880182f44012_init.py  98e289d11570_user_model.py  9f899fdf2569_add_is_turkish_provider.py  b2bd24b4e5cf_make_nullable.py  d43492657cbc_network.py
src/api/: deps.py  main.py
src/api/routes/: app.py  auth.py  serie.py  user.py
src/core/: browser.py  config.py  database.py  http.py  redis.py  security.py
src/crud/: auth.py  favorites.py  last_watched.py
src/helpers/: repeated_timer.py
src/providers/: __init__.py  base.py  dizipalv1.py
src/providers/dizipal/: __init__.py  dizipal.py  serie_page.py
src/providers/hdfilmcehennemi3/: hdfilmcehennemi.py
src/providers/hdrezka/: hdrezka.py
