[tool.poetry]
name = "ss"
version = "0.1.0"
description = ""
authors = ["Muhammed Kaplan <mmuhammedkaplan0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
undetected-chromedriver = "^3.5.5"
nodriver = "^0.29rc2"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"
odmantic = "^1.0.2"
aiohttp = "^3.9.5"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
sqlmodel = "^0.0.18"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.5.1"
autopep8 = "^2.1.0"
psycopg = "^3.1.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
