[tool.poetry]
name = "kinnema"
version = "0.1.0"
description = "Kinnema backend"
authors = ["Muhammed Kaplan <mmuhammedkaplan0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
psycopg = {extras = ["binary"], version = "^3.1.19"}
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
adrf = "^0.1.6"
django-environ = "^0.11.2"
aiohttp = "^3.9.5"
dataclasses-json = "^0.6.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
