[tool.poetry]
name = "ss"
version = "0.1.0"
description = ""
authors = ["Muhammed Kaplan <mmuhammedkaplan0@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
undetected-chromedriver = "^3.5.5"
nodriver = "^0.38.post1"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.1"
redis = "^5.0.4"
odmantic = "^1.0.2"
aiohttp = "^3.11.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
sqlmodel = "^0.0.18"
asyncpg = "^0.30.0"
pwdlib = {extras = ["argon2", "bcrypt"], version = "^0.2.1"}
uvicorn = "^0.29.0"
pyjwt = "^2.8.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
greenlet = "^3.1.1"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.5.1"
autopep8 = "^2.1.0"
psycopg = "^3.1.19"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
